--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,7 @@ a:hover {
   margin: 20px 0;
   border-radius: 4px;
   box-sizing:border-box;
+  text-align: justify
 
 }
 .boxx {
@@ -113,4 +114,5 @@ a:hover {
   height: 708px;
   display: block;
   margin: 0 auto 15px;
+
 }
