--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@
 
 body {
   font-family: 'Roboto-Regular', "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 18px;
+  font-size: 14px;
   line-height: 1.42857143;
   color: #333;
   background-color: var(--background);
@@ -31,14 +31,14 @@ body {
   box-sizing:border-box;
 }
 
-h1, h2, h3, h4, h5, h6 {
+ h2, h3, h4, h5, h6 {
   color: var(--contrast);
   font-weight: 600;
 }
 
 h1 {
   font-size: 22px;
-  text-align: center;
+  text-align:left;
   margin-bottom: 20px;
   color: var(--font-white);
 }
@@ -93,17 +93,17 @@ a:hover {
   background: #ffffff;
   border-left: 4px ;
   padding: 15px 18px;
-  margin: 20px 0px;
+  margin: 20px 0;
   border-radius: 4px;
   box-sizing:border-box;
-  text-align: justify
+  text-align: justify;
 
 }
 .boxx {
   background: #185E3D;
   border-left: 20px ;
   padding: 15px 18px;
-  margin: 20px 0px;
+  margin: 20px 0;
   border-radius: 4px;
   box-sizing:border-box;
   --font-white: #ffffff;
@@ -116,5 +116,3 @@ a:hover {
   margin: 0 auto 15px;
 
 }
-.margem
-
