--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body {
   line-height: 1.42857143;
   color: #333;
   background-color: var(--background);
-  margin: 0;
+  margin: 0px;
   padding: 20px;
   box-sizing: border-box;
 }
@@ -103,7 +103,7 @@ a:hover {
   background: #185E3D;
   border-left: 20px ;
   padding: 15px 18px;
-  margin: 20px 0;
+  margin: 20px 0px;
   border-radius: 4px;
   box-sizing:border-box;
   --font-white: #ffffff;
@@ -116,3 +116,4 @@ a:hover {
   margin: 0 auto 15px;
 
 }
+
