--- a/styles.css
+++ b/styles.css
@@ -11,150 +11,111 @@
   --contrast-link: #8DE3F0;
 }
 
-/* Fonte */
 @font-face {
   font-family: 'Roboto-Regular';
   src: url('Roboto/Roboto-Regular.ttf') format('truetype');
 }
 
-/* Reset */
-*, *::before, *::after {
-  box-sizing: border-box;
-}
-
 body {
   font-family: 'Roboto-Regular', "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  line-height: 1.6;
-  color: var(--black);
+  font-size: 18px;
+  line-height: 1.42857143;
+  color: #333;
   background-color: var(--background);
   margin: 0;
   padding: 20px;
+  box-sizing: border-box; 
+ 
 }
 
-/* ================= HEADER ================= */
+*, *::before, *::after {
+  box-sizing:border-box;
+}
 
-header {
+  h3, h4, h5, h6 {
+  color: var(--contrast);
+  font-weight: 600px;
+}
+
+header h1
+{
   background: #185E3D;
-  border-left: 20px;
-  padding: 15px 18px;
-  margin: 20px 0;
-  border-radius: 4px;
-  box-sizing: border-box;
-  color: var(--font-white);
-  font-size: 18px;
-}
-
-header p {
-  color: var(--font-white);
-  margin: 0;
-}
-
-/* ================= CONTEÚDO PRINCIPAL ================= */
-main {
-  max-width: 1100px;
-  margin: 0 auto;
-}
-
-/* ================= SEÇÕES ================= */
-section  {
-  background: #ffffff;
-  border-left: 4px ;
-  padding: 15px 18px;
-  margin: 20px 0;
-  border-radius: 4px;
-  box-sizing: border-box;
+  font-size: 16px;
   text-align: justify;
-  }
-
-  section h2 {
-  margin-top: 25px;
-  font-size: 18px;
-  color: var(--contrast); 
-  padding-bottom: 6px;
-}
-
-
-/* Subdivisões internas */
-section article {
-  margin-top: 15px;
-}
-
-/* ================= TÍTULOS ================= */
-
-h2, h3, h4, h5, h6 {
-  font-weight: 600;
+  box-sizing:border-box;
+  padding: 10px 15px 10px 15px;
+  color: var(--font-white);
+  margin-bottom: 0px;
+  margin-top: 300px;
+  margin-right: 40px;
+  margin-left: 45px;
+  
 }
 
 h3 {
+  font-size: 18px;
+  margin-top: 10px;
+
+}
+h4 {
+  font-size: 22px;
+  margin-bottom: 20px;
+}
+
+h5 {
+  font-size: 18px;
+  margin-top: 25px;
+}
+
+h6 {
   font-size: 16px;
   margin-top: 20px;
 }
 
-h4 {
-  font-size: 15px;
-  margin-top: 15px;
-}
-
-/* ================= TEXTO ================= */
-
 p {
-  margin: 0 0 10px;
-  color: #000000;
-  text-align: justify;
+ 
+  color: #333;
+  margin-top: 10px;
+  
 }
-
-/* ================= LISTAS ================= */
 
 ul {
-  padding-left: 20px;
+  padding-left: 15px;
   margin-bottom: 15px;
 }
 
 li {
   margin-bottom: 6px;
+ 
 }
-
-/* ================= LINKS ================= */
 
 a {
-  color: var(--Primary2);
+  color:#1a64c5 ;
   text-decoration: none;
-  font-weight: 500;
-}
+  }
 
 a:hover {
   text-decoration: underline;
 }
 
+.box {
+  font-size: 16px;
+  text-align: justify;
+  background: #fbf9f9;
+  padding: 10px 15px 10px 15px;
+  margin: 35px 0px 0px 85px;
+  margin-top: 0px;
+   margin-right: 40px;
+   margin-left: 45px;
+ 
 
-/* ================= IMAGENS ================= */
-
-img {
-  max-width: 100%;
-  height: auto;
-  border-radius: 6px;
+  
+  
 }
 
 .img-apadrinhamento {
-  max-width: 500px;
+  width: 500px;
+  height: 708px;
   display: block;
   margin: 0 auto 15px;
-}
-
-
-/* ================= RESPONSIVIDADE ================= */
-
-@media (max-width: 768px) {
-  body {
-    padding: 15px;
-  }
-
-   section {
-    padding: 18px;
-  }
-
-  h2 {
-    font-size: 16px;
-  }
 }
