--- a/styles.css
+++ b/styles.css
@@ -118,15 +118,16 @@ a:hover {
   margin: 0 auto 15px;
 }
 /* Estilo base (mobile) */
-.main-content {
+.main-box {
     padding: 10px;
 }
 
 /* Estilo para telas maiores */
 @media (min-width: 768px) {
-    .main-content {
+    .main-box {
         padding: 20px;
     }
 }
+
 
 
