--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,7 @@ a:hover {
   text-align: justify;
   background: #fbf9f9;
   padding: 10px 15px 10px 15px;
-  margin: 35px 0px 0px 85px;
+  margin: 35px;
   margin-top: 0px;
    margin-right: 40px;
    margin-left: 40px;
@@ -128,6 +128,7 @@ a:hover {
         padding: 20px;
     }
 }
+
 
 
 
