--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body {
   line-height: 1.42857143;
   color: #333;
   background-color: var(--background);
-  margin: 0;
+  margin: 40px;
   padding: 20px;
   box-sizing: border-box; 
  
@@ -128,6 +128,7 @@ a:hover {
         padding: 20px;
     }
 }
+
 
 
 
