--- a/styles.css
+++ b/styles.css
@@ -22,10 +22,9 @@ body {
   line-height: 1.42857143;
   color: #333;
   background-color: var(--background);
-  margin: 0;              /* REMOVE A MARGEM */
-  padding: 0;             /* REMOVE O PADDING */
-}
- 
+  margin: 0;
+  padding: 20px;
+  box-sizing: border-box;  
 }
 
 *, *::before, *::after {
@@ -183,6 +182,7 @@ a:hover {
     justify-content: center;
   }
 }
+
 
 
 
