--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body {
 }
 
    h4, h5, h6 {
-  color: var(--contrast);
+  color: #ffffff
   font-weight: 600px;
 }
 
@@ -148,6 +148,7 @@ a:hover {
   }
 
 }
+
 
 
 
